--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <p>Building responsive, user-focused web applications with React, Node.js, and MongoDB. Passionate about creating efficient solutions and continuously learning new technologies.</p>
             <div class="btn-box">
-                <a href="SumitSaini-Resume-GeneralProfessional-.pdf" download class="btn download-cv-btn">Download Resume <i class="fas fa-download"></i></a>
+               <a href="SumitSaini-Resume-GeneralProfessional-.pdf" target="_blank" class="btn">Resume <i class="fas fa-download"></i></a>
             </div>
         </div>
 
